feat: Expands the database to store historical stock price data and revamps the LineGraphActivity to properly display this data, satisfying one of the major rubric requirements for this project.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.melnykov:floatingactionbutton:1.2.0'
     compile 'com.android.support:design:23.1.1'
     compile 'com.diogobernardino:williamchart:2.2'
+    debugCompile 'im.dino:dbinspector:3.3.0@aar'
     compile('com.github.afollestad.material-dialogs:core:0.8.5.7@aar') {
         transitive = true
     }
