feat: Adds empty Widget components for building new Widget functionality for the application.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,16 @@
 
         <activity android:name=".ui.LineGraphActivity">
         </activity>
+
+        <!--Manifest code for Application Widget-->
+        <receiver android:name=".widget.StocksWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/stocks_widget_provider_info"/>
+        </receiver>
     </application>
 
 </manifest>
