--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.example.damian.stockhawk"
+        applicationId "com.damian.android.stockhawk"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
@@ -26,7 +27,7 @@ repositories {
 
 dependencies {
 
-    compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile "com.google.android.gms:play-services-gcm:9.0.0"
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     apt 'net.simonvt.schematic:schematic-compiler:0.6.3'
     compile 'net.simonvt.schematic:schematic:0.6.3'
